# forage

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  MIGRATION.md  PLANS.md  Package.swift  README.md  RELEASING.md  ROADMAP-RUST.md  ROADMAP.md  open-studio.sh  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ai-rules-review.yml  ci.yml  pr-review.yml  release.yml  rules-review.yml  rust-ci.yml  rust-release.yml  site.yml
Sources/Forage/: BrowserPaginate.swift  Capture.swift  Forage.swift  InjectedScripts.swift  OutputCatalog.swift
Sources/forage-cli/: Auth.swift  Capture.swift  Forage.swift  MFA.swift  Publish.swift  Run.swift  Scaffold.swift  Test.swift
Sources/forage-probe/: main.swift
Studio/: Info.plist  project.yml
Tests/ForageTests/: ArchiveTests.swift  BrowserProgressTests.swift  BrowserReplayerTests.swift  DiagnosticReportTests.swift  DocumentCaptureTests.swift  ExpectationEvaluatorTests.swift  ForageTests.swift  HTMLExtractionTests.swift  HTTPEngineTests.swift  HTTPProgressTests.swift  HubClientTests.swift  InteractiveSessionTests.swift  ParserTests.swift  RecipeImporterTests.swift  RecipeRegistryTests.swift  ScaffoldTests.swift  SessionAuthTests.swift  SessionCacheEncryptionTests.swift  SharedRecipesTests.swift  TestCommandTests.swift  UnhandledAffordancesTests.swift  ValidatorTests.swift
Tests/shared-recipes/: 01-minimal.forage  02-pagination.forage  03-enums-and-case.forage  04-pipelines.forage  05-validation-errors.forage  06-imports.forage  07-auth-session.forage  08-html-extraction.forage  10-cannabis-transforms.forage  expected.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  migrate.rs
apps/cli/tests/: cli_jsonld.rs  cli_migrate.rs  cli_publish.rs  cli_record.rs  cli_resolve.rs  cli_run_composition.rs  cli_run_flags.rs  cli_test_header_less.rs  cli_update.rs  hub_sync.rs
apps/studio/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/src/: browser_driver.rs  commands.rs  daemon_browser.rs  hub_sync.rs  lib.rs  library.rs  main.rs  menu.rs  run_artifacts.rs  state.rs  workspace.rs
apps/studio/src-tauri/tests/: hub_sync.rs
crates/forage-browser/: Cargo.toml
crates/forage-browser/src/: driver.rs  error.rs  lib.rs  replay.rs  shim.rs
crates/forage-core/: Cargo.toml
crates/forage-core/src/: ast.rs  error.rs  eval.rs  lib.rs  link.rs  linked.rs  parse.rs  progress.rs  runtime.rs  snapshot.rs  source.rs  transforms.rs  validate.rs
crates/forage-core/src/ast/: alignment.rs  auth.rs  browser.rs  expr.rs  http.rs  json.rs  mod.rs  pagination.rs  recipe.rs  span.rs  types.rs
crates/forage-core/src/eval/: error.rs  html.rs  mod.rs  scope.rs  transforms.rs  transforms_async.rs  value.rs
crates/forage-core/src/parse/: lexer.rs  mod.rs  parser.rs  token.rs
crates/forage-core/src/snapshot/: jsonld.rs  mod.rs
crates/forage-core/src/validate/: mod.rs
crates/forage-core/src/workspace/: fixtures.rs  manifest.rs  mod.rs
crates/forage-core/tests/: ast_roundtrip.rs  eval_smoke.rs  fixtures.rs  in_tree_recipes.rs  parser_smoke.rs  parser_workspace.rs  shared_recipes.rs  type_extension.rs  workspace.rs
crates/forage-daemon/: Cargo.toml
crates/forage-daemon/src/: db.rs  deployments.rs  error.rs  health.rs  lib.rs  migrate.rs  model.rs  output.rs  run.rs  scheduler.rs
crates/forage-daemon/tests/: composition.rs  deployment.rs  drift.rs  flags.rs  inputs.rs  keying.rs  lifecycle.rs  notebook.rs  output_schema.rs  scheduler_cron.rs  scheduler_interval.rs
crates/forage-daemon/tests/common/: mod.rs
crates/forage-http/: Cargo.toml
crates/forage-http/src/: auth.rs  body.rs  client.rs  debug.rs  driver.rs  engine.rs  error.rs  lib.rs  paginate.rs  progress.rs  transport.rs
crates/forage-http/tests/: fixtures_run.rs  phase5_replay.rs  replay.rs  shared_recipes_run.rs
crates/forage-hub/: Cargo.toml
crates/forage-hub/src/: auth_store.rs  client.rs  device.rs  error.rs  lib.rs  operations.rs  types.rs
crates/forage-hub/tests/: hub_sync.rs
crates/forage-keychain/: Cargo.toml
crates/forage-keychain/src/: lib.rs
crates/forage-lsp/: Cargo.toml
crates/forage-lsp/src/: docstore.rs  intel.rs  lib.rs  offsets.rs  server.rs
crates/forage-lsp/tests/: cross_file.rs
crates/forage-replay/: Cargo.toml
crates/forage-replay/src/: lib.rs
crates/forage-test/: Cargo.toml
crates/forage-test/fixtures/: 01-minimal.forage  02-pagination.forage  03-enums-and-case.forage  04-pipelines.forage  05-validation-errors.forage  07-auth-session.forage  08-html-extraction.forage  09-user-functions.forage  10-cannabis-transforms.forage  11-adapter-recipe.forage  12-wikidata-reconcile.forage  expected.json
crates/forage-test/src/: lib.rs
crates/forage-wasm/: Cargo.toml
crates/forage-wasm/src/: lib.rs
crates/forage-wasm/tests/: outline.rs  replay.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  first-recipe.md  install.md  introduction.md  lsp.md  studio.md  web-ide.md
homebrew-tap/: README.md
homebrew-tap/Formula/: forage.rb
hub-api/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
hub-api/src/: auth.ts  http.ts  index.ts  jsonld.ts  jwt.ts  oauth.ts  storage.ts  types.ts
hub-api/test/: _helpers.ts  discover.test.ts  downloads.test.ts  forks.test.ts  jsonld.test.ts  packages.test.ts  rate-limit-smoke.sh  run.sh  smoke.sh  stars.test.ts  types.test.ts  users.test.ts
hub-site/: about.md  edit.md  index.md  package-lock.json  package.json  publish.md
notes/: architectural-invariants.md  architecture-link-and-run.md  expression-language.md  forage-studio.md  grammar.md  jane-pipeline.md  language-tools-roadmap.md  typed-hub.md
plans/: docs-audit-findings.md  hub-ide-and-wasm-audit-followup.md  hub-ide-and-wasm-audit.md  hub-social-api-audit.md  studio-hub-sync-audit.md  user-fns-audit.md  workspace-lifecycle-audit.md
scripts/: e2e-publish.sh  install-hooks.sh  run-studio.sh
site/: 404.html  index.html  index.md  package-lock.json  package.json
(+324 files in other folders)
