[workspace]
resolver = "3"
members = [
    "crates/forage-core",
    "crates/forage-http",
    "crates/forage-browser",
    "crates/forage-hub",
    "crates/forage-keychain",
    "crates/forage-replay",
    "crates/forage-lsp",
    "crates/forage-wasm",
    "crates/forage-test",
    "apps/cli",
    "apps/studio/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/foragelang/forage"
homepage = "https://foragelang.com"
authors = ["Dmitry Minkovsky <dminkovsky@gmail.com>"]

[workspace.dependencies]
# Local crates — depend on each other via workspace = true.
forage-core     = { path = "crates/forage-core",     version = "0.1.0" }
forage-http     = { path = "crates/forage-http",     version = "0.1.0" }
forage-browser  = { path = "crates/forage-browser",  version = "0.1.0" }
forage-hub      = { path = "crates/forage-hub",      version = "0.1.0" }
forage-keychain = { path = "crates/forage-keychain", version = "0.1.0" }
forage-replay   = { path = "crates/forage-replay",   version = "0.1.0" }
forage-lsp      = { path = "crates/forage-lsp",      version = "0.1.0" }
forage-wasm     = { path = "crates/forage-wasm",     version = "0.1.0" }
forage-test     = { path = "crates/forage-test",     version = "0.1.0" }

# Async runtime + concurrency.
tokio        = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "sync", "time"] }
futures      = "0.3"
async-trait  = "0.1"
arc-swap     = "1"

# Errors + diagnostics.
anyhow       = "1"
thiserror    = "2"
ariadne      = "0.5"

# Serialization.
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Parser + language tooling.
chumsky      = "0.10"
regex        = "1"

# HTTP.
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies", "gzip", "brotli", "stream"] }
url          = "2"
tower        = { version = "0.5", features = ["util", "limit", "retry"] }
tower-http   = { version = "0.6", features = ["follow-redirect"] }

# Browser engine. wry+tao are lazily activated by forage-browser's
# `live` feature; this pin just centralizes the version.
wry          = "0.55"
tao          = "0.35"
scraper      = "0.22"

# Crypto + secret storage.
keyring      = "3"
aes-gcm      = "0.10"
sha2         = "0.10"
rand         = "0.9"

# LSP.
tower-lsp    = "0.20"

# WASM.
wasm-bindgen        = "0.2"
serde-wasm-bindgen  = "0.6"
js-sys              = "0.3"
web-sys             = "0.3"

# CLI.
clap         = { version = "4.5", features = ["derive", "env"] }
owo-colors   = "4"
similar      = "2"
indicatif    = "0.17"

# Filesystem + paths.
dirs         = "5"
walkdir      = "2"
tempfile     = "3"

# Logging.
tracing                  = "0.1"
tracing-subscriber       = { version = "0.3", features = ["env-filter", "fmt"] }

# Misc.
once_cell    = "1"
indexmap     = { version = "2", features = ["serde"] }

# Test-only.
wiremock     = "0.6"
insta        = { version = "1", features = ["json"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# Faster recompiles for dependencies in dev builds.
[profile.dev.package."*"]
opt-level = 2
