[package]
name = "forage-cli"
description = "The `forage` command-line tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "forage"
path = "src/main.rs"

[dependencies]
forage-core      = { workspace = true }
forage-http      = { workspace = true }
forage-replay    = { workspace = true }
# forage-browser + forage-hub + forage-lsp wired up in R5, R6, R7.

tokio       = { workspace = true }
clap        = { workspace = true }
anyhow      = { workspace = true }
indexmap    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
ariadne     = { workspace = true }
owo-colors  = { workspace = true }
similar     = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
