[package]
name = "forage-cli"
description = "The `forage` command-line tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "forage"
path = "src/main.rs"

[dependencies]
forage-core      = { workspace = true }
forage-http      = { workspace = true, features = ["native"] }
forage-replay    = { workspace = true }
forage-hub       = { workspace = true }
forage-keychain  = { workspace = true }
forage-lsp       = { workspace = true, features = ["native"] }
forage-browser   = { workspace = true }

tokio       = { workspace = true }
async-trait = { workspace = true }
clap        = { workspace = true }
anyhow      = { workspace = true }
indexmap    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
ariadne     = { workspace = true }
owo-colors  = { workspace = true }
similar     = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
wiremock    = { workspace = true }
tempfile    = { workspace = true }
assert_cmd  = "2.0"
predicates  = "3.1"
