[package]
name = "forage-browser"
description = "Forage browser engine: drives wry webviews, captures fetch/XHR, M10 interactive bootstrap."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forage-core    = { workspace = true }
forage-replay  = { workspace = true }

async-trait    = { workspace = true }
tokio          = { workspace = true }

# wry + tao gate the live driver; replay mode is pure data.
# Activated by the `live` feature (default), turned off for wasm/CI builds.
wry            = { workspace = true, optional = true }
tao            = { workspace = true, optional = true }
scraper        = { workspace = true }

serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
indexmap       = { workspace = true }

regex          = { workspace = true }
dirs           = { workspace = true }
url            = { workspace = true }

[features]
# `live` ships in R4 followup — turns on wry+tao for the in-process
# browser driver. Until then, only the replay engine is built.
default = []
live    = ["dep:wry", "dep:tao"]
