[package]
name = "forage-core"
description = "Forage recipe parser, validator, evaluator, snapshot — the language core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
chumsky     = { workspace = true }
ariadne     = { workspace = true }
regex       = { workspace = true }
indexmap    = { workspace = true }
once_cell   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
insta       = { workspace = true }
