[package]
name = "forage-http"
description = "Forage HTTP engine: auth flavors, pagination, session cache."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["native"]
# Live transport (reqwest + tokio synchronization primitives). Disabled
# when building the engine for wasm32: only `ReplayTransport` compiles
# unconditionally, and `LiveTransport` becomes a `#[cfg]`-gated
# native-only path.
native = ["dep:reqwest", "dep:tokio"]

[dependencies]
forage-core      = { workspace = true }
forage-replay    = { workspace = true }

async-trait = { workspace = true }
futures     = { workspace = true }

reqwest     = { workspace = true, optional = true }
tokio       = { workspace = true, optional = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
ts-rs       = { workspace = true }

regex       = { workspace = true }
indexmap    = { workspace = true }

[dev-dependencies]
wiremock    = { workspace = true }
tempfile    = { workspace = true }
tokio       = { workspace = true }
