[package]
name = "forage-hub"
description = "Forage hub client: publish, fetch, import resolution, auth store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forage-core      = { workspace = true }
forage-keychain  = { workspace = true }

tokio       = { workspace = true }
async-trait = { workspace = true }

reqwest     = { workspace = true }
url         = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

dirs        = { workspace = true }

[dev-dependencies]
wiremock    = { workspace = true }
tempfile    = { workspace = true }
