[package]
name = "forage-keychain"
description = "Cross-platform secret storage (macOS Keychain / Windows Credential Manager / Linux Secret Service)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
keyring     = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
