[package]
name = "forage-lsp"
description = "Forage Language Server Protocol implementation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forage-core  = { workspace = true }

tokio        = { workspace = true }
tower-lsp    = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
