[package]
name = "forage-replay"
description = "Shared capture/fixture types + replayers (HTTPReplayer, BrowserReplayer)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forage-core  = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
indexmap     = { workspace = true }
url          = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
