[package]
name = "forage-test"
description = "Shared-recipes test harness + golden snapshots."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forage-core  = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
insta        = { workspace = true }
