[package]
name = "forage-test"
description = "Parity-fixture loader for the cross-implementation recipe test vectors."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
