[package]
name = "forage-wasm"
description = "wasm-bindgen exports of forage-core for the web IDE."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
forage-core         = { workspace = true }

wasm-bindgen        = { workspace = true }
serde-wasm-bindgen  = { workspace = true }
js-sys              = { workspace = true }
web-sys             = { workspace = true }

serde               = { workspace = true }
serde_json          = { workspace = true }
