[package]
name = "forage-wasm"
description = "wasm-bindgen exports of forage-core for the web IDE."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# Skip wasm-opt: bulk-memory operations need an opt-in flag the bundled
# wasm-opt doesn't support. Bundled binary already small enough.
wasm-opt = false

[dependencies]
forage-core         = { workspace = true }
forage-http         = { workspace = true }
forage-lsp          = { workspace = true, default-features = false }

wasm-bindgen        = { workspace = true }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen  = { workspace = true }

serde               = { workspace = true }
serde_json          = { workspace = true }
indexmap            = { workspace = true }

[dev-dependencies]
tokio               = { workspace = true }
