[package]
name = "forage-studio"
description = "Forage Studio — macOS authoring app for Forage recipes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "forage_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "forage-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
# Forage crates
forage-core      = { workspace = true }
forage-daemon    = { workspace = true }
forage-http      = { workspace = true, features = ["native"] }
forage-replay    = { workspace = true }
forage-browser   = { workspace = true }
forage-hub       = { workspace = true }
forage-keychain  = { workspace = true }
forage-lsp       = { workspace = true }

# Tauri
tauri        = { version = "2.8", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2.4"

# Standard
arc-swap     = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
ts-rs        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
indexmap     = { workspace = true }
dirs         = { workspace = true }
tempfile     = { workspace = true }
regex        = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tracing-test = "0.2.6"
